--- a/package.json
+++ b/package.json
@@ -6,11 +6,37 @@
   "repository": "git@github.com:rjgeng/weather-power-up.git",
   "author": "RJ Geng",
   "license": "MIT",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "build": "parcel build src/html/*.html"
+    "build": "parcel build src/html/*.html",
+    "lint": "eslint src"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.30.1",
     "parcel-bundler": "^1.12.5",
-    "parcel-plugin-interpolate-env": "^0.0.1"
+    "parcel-plugin-interpolate-env": "^0.0.1",
+    "prettier": "^1.17.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true
+    },
+    "extends": ["airbnb/base", "plugin:prettier/recommended"],
+    "parser": "babel-eslint",
+    "plugins": ["prettier"]
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
